--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@fullcalendar/interaction": "^6.1.5",
         "@fullcalendar/react": "^6.1.5",
         "@fullcalendar/timegrid": "^6.1.5",
+        "@inertiajs/inertia": "^0.11.1",
         "@reduxjs/toolkit": "^1.9.3",
         "daisyui": "^2.51.5",
         "react-redux": "^8.0.5",
