--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@reduxjs/toolkit": "^1.9.3",
         "daisyui": "^2.51.5",
+        "react-cookie": "^4.1.1",
         "react-redux": "^8.0.5",
         "redux": "^4.2.1",
         "styled-components": "^5.3.9",
